--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -34,3 +34,27 @@ build:
         manual:
           - src: '/**/*.ts'
             dest: .
+    - image: us.gcr.io/ticketing-dev-277617/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '/**/*.ts'
+            dest: .
+    - image: us.gcr.io/ticketing-dev-277617/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '/**/*.ts'
+            dest: .
+    - image: us.gcr.io/ticketing-dev-277617/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '/**/*.ts'
+            dest: .
