--- a/payments/package.json
+++ b/payments/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@bmtickets/common": "^1.0.12",
+    "@bmtickets/common": "^1.0.14",
     "@types/cookie-session": "^2.0.39",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
@@ -31,6 +31,7 @@
     "mongoose": "^5.9.15",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.60.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.2"
   },
