--- a/tickets/package.json
+++ b/tickets/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watchAll --no-cache"
+    "test": "jest --watchAll --no-cache",
+    "test:ci": "sh node_modules/.bin/jest"
   },
   "jest": {
     "preset": "ts-jest",
