--- a/infra/k8s/expiration-depl.yaml
+++ b/infra/k8s/expiration-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: expiration
-          image: us.gcr.io/ticketing-dev-277617/expiration
+          image: 38714988881928671/expiration
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
