--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: tickets
-          image: us.gcr.io/ticketing-dev-277617/tickets
+          image: 38714988881928671/tickets
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
